# logistic-regression-lab

./: README.md  pyproject.toml
notebooks/: adult_income.ipynb  titanic.ipynb
