[project]
name = "logistic-regression-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.3.0",
    "kaggle>=2.2.2",
    "matplotlib>=3.11.0",
    "missingno>=0.5.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
